[레거시 코드 리팩터링 - 2단계] 모디(전제희) 미션 제출합니다. (#600)
* refactor: JPA로 마이그레이션

* refactor: TableService 예외 커스텀

* test: TableService test 재구현

* test: TableGroupService test 재구현 및 예외 커스텀

* test: ProductService test 재구현 및 예외 커스텀

* refactor: OrderTable 내부에 손님 수 변경 시 검증 로직 내재화

* test: MenuService test 재구현

* test: MenuGroupService test 재구현

* test: OrderService test 재구현 및 예외 커스텀

* refactor: Orders의 OrderStatus를 String에서 enum으로 변경

* refactor: menu의 가격을 VO로 embed

* refactor: menu 가격 검증 로직 menu로 내재화

* refactor: 불필요한 어노테이션 제거

* refactor: TableService 로직 메서드 분리 및 일부 도메인 내부로 이전

* refactor: MenuGroup의 사용하지 않는 setter 제거

* test: 단체 테이블을 empty로 바꾸는 경우에 대한 테스트 추가